Where label for filter spans more than 1 line, push next filter down to avoid overflow

--- a/public/css/cpdbviz.css
+++ b/public/css/cpdbviz.css
@@ -208,6 +208,13 @@ nav ul li a, h5 {
 .filter-row {
   margin-left: 0 !important;
   margin-right: 0 !important;
+  display: table;
+  padding-bottom: 0;
+  margin-bottom: 5px;
+}
+
+.filter-label {
+  display: table-row;
 }
 
 #apply-reset-filters, .no-margin-bottom {
